<?xml version="1.0"?>

<package format="2">

  <name>direct_lidar_inertial_odometry</name>
  <version>1.1.1</version>
  <description>Direct LiDAR-Inertial Odometry: Lightweight LIO with Continuous-Time Motion Correction</description>

  <maintainer email="kennyjchen@ucla.edu">Kenny J. Chen</maintainer>
  <maintainer email="ryguyn@ucla.edu">Ryan Nemiroff</maintainer>
  <maintainer email="btlopez@ucla.edu">Brett T. Lopez</maintainer>

  <author>Kenny J. Chen</author>
  <author>Ryan Nemiroff</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>

</package>
